# socketor

./: .gitmodules  CMakeLists.txt  README.md  client_test.cpp  request.json  server_test.cpp  sock_client.cpp  sock_server.cpp  socketor.cpp  test.cpp  turing.cpp  turing.h
Example/: CMakeLists.txt
Example/ChatDialog/: CMakeLists.txt  ClientThread.cpp  ClientThread.h  ServerThread.cpp  ServerThread.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  welcome.cpp  welcome.h  welcome.ui
Example/FileTransform/: CMakeLists.txt  fileStruct.h  receiver.cpp  sender.cpp
Example/GetStart/: CMakeLists.txt  client_test.cpp  server_test.cpp
Example/SockStream/: CMakeLists.txt  sockstreamExample.cpp
Example/TinyServerExample/: CMakeLists.txt  TinyServerExample.cpp
Example/test/: CMakeLists.txt  client_test.cpp  server_test.cpp
FileTransform/: CMakeLists.txt  fileStruct.h  receiver.cpp  sender.cpp
cmake/: Findsocketor.cmake
google_test/: CMakeLists.txt  clientTest.cpp  connectTest.cpp  serverTest.cpp  socketTest.cpp  sockstreamTest.cpp  tinyServerTest.cpp
include/: client.h  function.h  server.h  sock_client.h  sock_server.h  socketor.h  sockstream.h  tinyServer.h
src/: client.cpp  function.cpp  server.cpp  socketor.cpp  sockstream.cpp  tinyServer.cpp
temp/: CMakeLists.txt
